# goat

./: .gitignore  README.md  cancel_order.mjs  check_wallet.mjs  fix_plan.md  goat.code-workspace  goat_iris_integration.py  package-lock.json  package.json  test_order.js  test_order.mjs  test_plugin.mjs
.changeset/: allora-python-plugin.md
.cursor/rules/: main-rules.mdc
.github/workflows/: ci-cd-python.yml  ci.yml
.husky/: pre-commit
docs/: chains-wallets-plugins.mdx  plugins.mdx  wallets.mdx
extra/: .env
extra/docs/: hyperliquid_endpon.md  project_status.md
python/: README.md  create_plugin.py  pyproject.toml
python/.changeset/: solana-plugin-support.md
python/examples/by-framework/ag2/: example.py
python/examples/by-framework/crewai/: example.py  example_smartwallet_delegated_signer.py  pyproject.toml
python/examples/by-framework/langchain/: README.md  example.py
python/examples/by-framework/openai-agents-sdk/: README.md  example.py
python/examples/by-framework/smolagents/: example.py
python/examples/by-framework/virtuals-game/: README.md
python/examples/by-framework/zerepy/: README.md
python/examples/by-use-case/coingecko-openai-agents-sdk/: .env.template  README.md  example.py  pyproject.toml
python/examples/by-use-case/dpsn-subscribe/: README.md  example.py
python/examples/by-use-case/evm-purchase-on-amazon/: .env.template  README.md  crossmint_plugin.py  main.py  requirements.txt
python/examples/by-use-case/evm-send-and-receive-tokens/: README.md  example.py  example_with_coingecko.py  pyproject.toml  test_wallet.py
python/examples/by-use-case/evm-swap-tokens/: README.md  example.py
python/examples/by-use-case/opensea-langchain/: .env.template  README.md  example.py  pyproject.toml
python/examples/by-use-case/rugcheck-crewai/: README.md  example.py
python/examples/by-use-case/solana-purchase-on-amazon/: .env.example  README.md  main.py  requirements.txt
python/examples/by-use-case/solana-send-and-receive-tokens/: README.md  example.py  example_with_coingecko.py  test_wallet.py
python/examples/by-use-case/solana-swap-tokens/: README.md  example.py
python/examples/by-use-case/solana-usdc-yield-deposit/: README.md  example.py
python/examples/by-use-case/uniswap-crewai/: .env.template  README.md  example.py  pyproject.toml
python/examples/by-wallet/crossmint/: README.md  smart_evm_wallet_example.py  solana_smart_wallet_creation_examples.py  solana_smart_wallet_example.py
python/examples/langchain/: example.py  pyproject.toml
python/examples/langchain/crossmint/: smart_evm_wallet_example.py
python/examples/langchain/solana/: example.py  pyproject.toml
python/examples/langchain/web3/: pyproject.toml  uniswap_example.py
python/examples/rugcheck-crewai/: .env.template  pyproject.toml
python/examples/solana/wallet/: .env.template  example.py
python/scripts/: create_plugin.py  version_bump.py
python/src/adapters/crewai/: README.md
python/src/adapters/smolagents/: README.md
python/src/goat-sdk/goat/: __init__.py
python/src/plugins/1inch/: README.md  pyproject.toml
python/src/plugins/coingecko/: pyproject.toml
python/src/plugins/coingecko-token-discovery/: README.md  pyproject.toml
python/src/plugins/coingecko-token-discovery/goat_plugins/coingecko_token_discovery/: __init__.py  parameters.py  service.py
python/src/plugins/coingecko-token-discovery/test/: test_plugin.py
python/src/plugins/crossmint-headless-checkout/: README.md  (+1 more)
typescript/: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsup.config.base.ts
typescript/.changeset/: add-coingecko-endpoints.md  config.json  dexscreener-plugin-add.md  fast-candles-sin.md  fuzzy-spoons-smell.md  healthy-laws-vanish.md  hot-bees-sin.md  hot-turtles-dress.md  kind-rules-beg.md  kind-toes-accept.md  lemon-snails-poke.md  mighty-rats-bathe.md  nervous-ducks-bathe.md  selfish-pears-double.md  spotty-toes-pull.md  ten-plants-retire.md  tiny-suits-boil.md  twenty-penguins-invent.md
typescript/examples/test/: package.json
typescript/scripts/: createPlugin.ts  tsconfig.json
(+291 files in other folders)
