[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "goat-plugins-coingecko-token-discovery"
version = "0.1.0"
description = "CoinGecko token discovery plugin for GOAT SDK"
authors = ["GOAT SDK <info@goat-sdk.com>"]
readme = "README.md"
packages = [{include = "goat_plugins"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = "^3.8.5"
goat-sdk = {path = "../../goat-sdk", develop = true}
goat-sdk-wallet-evm = {path = "../../wallets/evm", develop = true}
goat-sdk-wallet-solana = {path = "../../wallets/solana", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
